--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton, .lineUpButton, .spin{
+.title, .addDancerButton, .lineUpButton, .spin, .bouncer{
   padding:5px 12px;
   float:right;
 }
